@@ -2,6 +2,7 @@
 v6.0.0-git
 ----------
 
+[jan] Fix key navigation in message view of basic mode.
 
 
 ---------
